kube/resource-api/resource-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-api
  labels:
    app.kubernetes.io/name: resource-api
    app.kubernetes.io/part-of: disaster-relief
    app.kubernetes.io/component: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: resource-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: resource-api
        app.kubernetes.io/part-of: disaster-relief
        app.kubernetes.io/component: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: resource-api
          image: acrdisasterreliefdev.azurecr.io/resource-api:stable
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
#        - name: secrets-store-inline
#          csi:
#            driver: secrets-store.csi.k8s.io
#            readOnly: true
#            volumeAttributes:
#              secretProviderClass: "postgres-kv-sync"
