kube/resource-api/resource-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: resource-api-service
  labels:
    app.kubernetes.io/name: resource-api
    app.kubernetes.io/part-of: disaster-relief
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: resource-api
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
